// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<input
  className="stncl__input"
  onChange={[Function]}
  type="text"
  value="button"
/>
`;

exports[`renders input type of checkbox given a type of bool 1`] = `
<input
  checked={false}
  className="stncl__checkbox"
  onChange={[Function]}
  type="checkbox"
/>
`;

exports[`renders input type of checkbox given a type of bool and has attribute checked 1`] = `
<input
  checked={true}
  className="stncl__checkbox"
  onChange={[Function]}
  type="checkbox"
/>
`;
